h1. CHANGELOG

h2. 1.4.7 April 25, 2012

* improve 'html5' recipe to move flash messages into partials for application layouts
* add 'paperclip' recipe with support for mongoid and cloudfiles (contributed by merlinvn)
* add 'cloudfiles' recipe (contributed by merlinvn)
* improve 'extras' recipe to support mongoid for will_paginate (contributed by merlinvn) 
* improve 'active_admin' recipe to support mongoid (contributed by merlinvn) 
* improve 'home_page' recipe to allow use of 'slim' recipe (contributed by Guten Ye)
* improve 'omniauth' recipe to add Tumblr to the strategy list (contributed by monfresh)
* correct error when using Cucumber and Capybara recipes together (contributed by Alan Oliver)
* update gem 'mongoid' from 2.4.8 to 2.4.9
* update gem 'factory_girl_rails' from 3.1.0 to 3.2.0
* update gem 'rails-backbone' from 0.7.1 to 0.7.2
* update gem 'omniauth' from 1.0.3 to 1.1.0

h2. 1.4.6 April 11, 2012

* resolve versioning issues

h2. 1.4.5 April 11, 2012

* add option for authorization with CanCan and Rolify
* add 'will-paginate' option to 'extras' recipe
* update gem 'mongoid' from 2.4.7 to 2.4.8

h2. 1.4.4 April 3, 2012

* update gem 'factory_girl_rails' from 3.0.0 to 3.1.0
* update gem 'bson_ext' from 1.6.1 to 1.6.2
* update 'devise' recipe to use Devise 2.1.0.rc when devise_invitable is selected
* tweak 'simple_form' recipe

h2. 1.4.3 April 3, 2012

* update 'add_user' and 'omniauth' recipes to fix problem generating rails3-mongoid-omniauth example
* add 'redis' recipe (contributed by Julián Porta)
* add 'resque' recipe (contributed by Julián Porta)

h2. 1.4.2 April 2, 2012

* add 'compass_960' recipe (contributed by Julián Porta)
* update 'compass' recipe (contributed by Julián Porta)

h2. 1.4.1 April 2, 2012

* add 'datamapper' recipe (contributed by Peter Fern)
* rename 'hoptoad' recipe to 'airbrake' and update (contributed by Peter Fern)
* update 'extras' recipe to run 'rails-footnotes' generator when selected (contributed by Peter Fern)