@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.4.7"
+  VERSION = "1.4.8"
 end
